--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
     "trailingComma": "all",
     "singleQuote": true,
     "printWidth": 120,
-    "tabWidth": 4
+    "tabWidth": 4,
+    "endOfLine": "lf"
 }
