--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
         "it": true,
         "expect": true,
         "beforeEach": true,
-        "afterEach": true
+        "afterEach": true,
+        "Headers": true
     }
 }
