Show publishing time in the how much time passed format

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
         "expect": true,
         "beforeEach": true,
         "afterEach": true,
-        "Headers": true
+        "Headers": true,
+        "jest": true
     }
 }
