--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "private": true,
     "dependencies": {
         "lodash": "^4.17.11",
+        "normalize.css": "^8.0.1",
         "react": "^16.7.0",
         "react-dom": "^16.7.0",
         "react-scripts": "2.1.3"
