--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@endouble.com/eslint-config-endouble": "^2.0.0",
         "jest-fetch-mock": "^2.1.0",
         "prettier": "^1.16.4",
-        "prop-types": "^15.6.2"
+        "prop-types": "^15.6.2",
+        "react-test-renderer": "^16.8.1"
     }
 }
